# godot-asset-uploader

./: .gitignore  README.md  pyinstaller-main.py  pyproject.toml
.github/workflows/: lint-and-test.yml  python-package.yml
godot_asset_uploader/: cli.py  config.py  errors.py  evil.py  main.py  markdown.py  rest_api.py  util.py  vcs.py
godot_asset_uploader/vcs/: __init__.py  enum.py  git.py  hg.py  providers.py
test/: test_cli.py  test_markdown.py  test_util.py  test_vcs.py  test_vcs_git.py  test_vcs_hg.py  vcs_urls.py
test/test_markdown/: CHANGELOG-long.md  CHANGELOG-short.md  README-trivial.md  README-with-changelog.md  test_get_asset_description_None_https___dummy_user_bitbucket_org_dummy_user_dummy_repo_README_trivial_md_CHANGELOG_long_md_.yml  test_get_asset_description_None_https___dummy_user_bitbucket_org_dummy_user_dummy_repo_README_trivial_md_CHANGELOG_short_md_.yml  test_get_asset_description_None_https___dummy_user_bitbucket_org_dummy_user_dummy_repo_README_with_changelog_md_CHANGELOG_long_md_.yml  test_get_asset_description_None_https___dummy_user_bitbucket_org_dummy_user_dummy_repo_README_with_changelog_md_CHANGELOG_short_md_.yml  test_get_asset_description_None_https___github_com_dummy_user_dummy_repo_README_trivial_md_CHANGELOG_long_md_.yml  test_get_asset_description_None_https___github_com_dummy_user_dummy_repo_README_trivial_md_CHANGELOG_short_md_.yml  test_get_asset_description_None_https___github_com_dummy_user_dummy_repo_README_with_changelog_md_CHANGELOG_long_md_.yml  test_get_asset_description_None_https___github_com_dummy_user_dummy_repo_README_with_changelog_md_CHANGELOG_short_md_.yml  (+65 more)
(+19 files in other folders)
