[tool.poetry]
name = "godot-asset-uploader"
version = "0.1.0"
description = "Automatically upload and update assets in Godot Asset Library"
authors = ["Maciej Katafiasz <mathrick@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
gdasset = "godot_asset_uploader.main:safe_cli"

[tool.poetry-pyinstaller-plugin]
use-poetry-install = true

[tool.poetry-pyinstaller-plugin.scripts]
gdasset = { source = "pyinstaller-main.py", type = "onefile", bundle = false}

[tool.poetry.dependencies]
# <3.14 because of pyinstaller
python = "^3.8,<3.14"
mistletoe = "^1.4.0"
click = "^8.1.7"
dulwich = "^0.22.1"
requests = "^2.32.3"
validator-collection = "^1.5.0"
tomlkit = "^0.13.2"
giturlparse = "^0.12.0"
cloup = "^3.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-regressions = "^2.5.0"
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
